--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
+    "babel-eslint": "^7.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.5.2",
     "browser-sync": "^2.2.1",
@@ -32,9 +33,9 @@
   },
   "eslintConfig": {
     "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module"
-  },
+      "ecmaVersion": 6,
+      "sourceType": "module"
+    },
     "env": {
       "es6": true,
       "node": true,
