--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "babel-eslint": "^7.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.5.2",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.2.1",
+    "browserify": "^14.3.0",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
@@ -29,6 +31,8 @@
     "gulp-useref": "^3.0.0",
     "main-bower-files": "^2.5.0",
     "run-sequence": "^1.2.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "wiredep": "^4.0.0"
   },
   "eslintConfig": {
