--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.0.0",
     "main-bower-files": "^2.5.0",
+    "random-seed": "^0.3.0",
     "run-sequence": "^1.2.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
