--- a/bower.json
+++ b/bower.json
@@ -4,9 +4,7 @@
   "dependencies": {
     "bootstrap": "~4.0.0-alpha.6",
     "modernizr": "~2.8.1",
-    "animate.css": "^3.5.2",
-    "seiyria-bootstrap-slider": "^9.8.0",
-    "rangeslider.js": "^2.3.0"
+    "animate.css": "^3.5.2"
   },
   "overrides": {
     "bootstrap": {
